[project]
name = "mlbase"
version = "0.1.0"
description = "Base machine learning utilities for research."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jason Stock" }]
dependencies = [
    "numpy",
    "torch",
    "tensorflow",
    "mlx",
    "matplotlib",
    "ray",
    "scikit-learn",
    "torch_optimizer",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mlbase*"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = ["ty", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
